fixed gallery... no longer wraps down & title has correct line length

--- a/assets/css/core.styl
+++ b/assets/css/core.styl
@@ -647,7 +647,6 @@ img
 	margin 5px
 	margin-top 15px
 	padding-top 0
-	line-height 2
 
 .wp-showcase li
 	border 5px solid light_gray
