--- a/assets/css/gallery.styl
+++ b/assets/css/gallery.styl
@@ -43,7 +43,6 @@
 	margin: 15px
 	box-shadow 0 0 10px black
 
-
 #portfolio-sidebar
 	z-index 2
 	position relative
@@ -82,17 +81,21 @@
 		padding 5px
 		margin 0 5px
 
-@media only screen and (min-width: 500px)
+@media only screen and (min-width: 600px)
+	sidebar_width = 200px
+
 	#portfolio-sidebar, .flexslider
 		display: inline-block
 		vertical-align: top
+		box-sizing border-box
 
 	#portfolio-sidebar
-		width: 150px
-		margin-right -165px
+		width sidebar_width
 
 	.flexslider
-		padding-left 180px
+		padding-left sidebar_width + 45px
+		margin-left -(sidebar_width + 46px)
+		max-width 100%
 
 #portfolio-nav
 	text-align center
